Мобильная версия каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -210,9 +210,9 @@
               <a href="#" class="products__button button">Заказать</a>
             </li>
 
-            <li class="catalog__item products products--extra">
-              <h3 class="products__title">Показать еще 100500 товаров</h3>
-              <p class="products__text">На самом деле вкусов гораздо больше!</p>
+            <li class="catalog__item products-extra">
+              <h3 class="products-extra__title">Показать еще 100500 товаров</h3>
+              <p class="products-extra__text">На самом деле вкусов гораздо больше!</p>
               <button class="products__button button--secondary button">показать все</button>
             </li>
           </ul>
@@ -220,47 +220,49 @@
       </section>
 
       <section class="additional-items">
-        <h2 class="additional-items__title">Дополнительные товары</h2>
-        <ul class="additional-items__unit list-reset">
-          <li class="additional-item__item addition">
-            <h3 class="addition__title">Сахарозаменитель</h3>
-            <div class="addition__compound">
-              <p class="addition__text">1 упаковка (100 г)</p>
-              <p class="addition__text">200 Р.</p>
-            </div>
-            <a href="#" class="addition__button button">Заказать</a>
-          </li>
+        <div class="conteiner">
+          <h2 class="additional-items__title">Дополнительные товары</h2>
+          <ul class="additional-items__unit list-reset">
+            <li class="additional-item__item addition">
+              <h3 class="addition__title">Сахарозаменитель</h3>
+              <div class="addition__compound">
+                <p class="addition__text">1 упаковка (100 г)</p>
+                <p class="addition__text">200 Р.</p>
+              </div>
+              <a href="#" class="addition__button button">Заказать</a>
+            </li>
 
-          <li class="additional-item__item addition">
-            <h3 class="addition__title">питьевая вода</h3>
-            <div class="addition__compound">
-              <p class="addition__text">5 литров</p>
-              <p class="addition__text">50 Р.</p>
-            </div>
-            <a href="#" class="addition__button button">Заказать</a>
-          </li>
+            <li class="additional-item__item addition">
+              <h3 class="addition__title">питьевая вода</h3>
+              <div class="addition__compound">
+                <p class="addition__text">5 литров</p>
+                <p class="addition__text">50 Р.</p>
+              </div>
+              <a href="#" class="addition__button button">Заказать</a>
+            </li>
 
-          <li class="additional-item__item addition">
-            <h3 class="addition__title">Молок</h3>
-            <div class="addition__compound">
-              <p class="addition__text">1 литр</p>
-              <p class="addition__text">100 Р.</p>
-            </div>
-            <a href="#" class="addition__button button">Заказать</a>
-          </li>
+            <li class="additional-item__item addition">
+              <h3 class="addition__title">Молок</h3>
+              <div class="addition__compound">
+                <p class="addition__text">1 литр</p>
+                <p class="addition__text">100 Р.</p>
+              </div>
+              <a href="#" class="addition__button button">Заказать</a>
+            </li>
 
-          <li class="additional-item__item addition">
-            <h3 class="addition__title">Витамины</h3>
-            <div class="addition__compound">
-              <p class="addition__text">1 упаковка (30 г)</p>
-              <p class="addition__text">300 Р.</p>
-            </div>
-            <a href="#" class="addition__button button">Заказать</a>
-          </li>
-        </ul>
+            <li class="additional-item__item addition">
+              <h3 class="addition__title">Витамины</h3>
+              <div class="addition__compound">
+                <p class="addition__text">1 упаковка (30 г)</p>
+                <p class="addition__text">300 Р.</p>
+              </div>
+              <a href="#" class="addition__button button">Заказать</a>
+            </li>
+          </ul>
 
-        <div class="additional-items__present">
-          <p class="additional-items__sentence">Закажите все и получите чехол для кота в подарок!</p>
+          <div class="additional-items__present">
+            <p class="additional-items__sentence">Закажите все и получите чехол для кота в подарок!</p>
+          </div>
         </div>
       </section>
 
@@ -276,8 +278,10 @@
     </main>
 
     <footer class="footer">
-      <img src="img/footer-logo.svg" alt="Cat Energy" width="128" height="24" class="footer__logo-text">
-      <ul class="footer__socials list-reset">
+      <a href="index.html" class="footer__logo-link">
+        <img src="img/footer-logo.svg" alt="Cat Energy" width="128" height="24" class="footer__logo-text">
+      </a>
+      <ul class="footer__socials socials list-reset">
         <li class="socials__item socials--vk">
           <a href="https://vk.com/htmlacademy" class="socials__socials">
             <span class="visually-hidden">вконтакте</span>
