--- a/source/catalog.html
+++ b/source/catalog.html
@@ -39,7 +39,7 @@
       <h1 class="visually-hidden">Cat Energy - Функциональное питание для котов</h1>
 
       <section class="catalog">
-        <div class="conteiner">
+        <div class="container">
           <h2 class="catalog__title">Каталог продукции</h2>
           <ul class="catalog__list list-reset">
             <li class="catalog__item products">
@@ -220,7 +220,7 @@
       </section>
 
       <section class="additional-items">
-        <div class="conteiner">
+        <div class="container">
           <h2 class="additional-items__title">Дополнительные товары</h2>
           <ul class="additional-items__unit list-reset">
             <li class="additional-item__item addition">
@@ -278,31 +278,33 @@
     </main>
 
     <footer class="footer">
-      <a href="index.html" class="footer__logo-link">
-        <img src="img/footer-logo.svg" alt="Cat Energy" width="128" height="24" class="footer__logo-text">
-      </a>
-      <ul class="footer__socials socials list-reset">
-        <li class="socials__item socials--vk">
-          <a href="https://vk.com/htmlacademy" class="socials__socials">
-            <span class="visually-hidden">вконтакте</span>
-          </a>
-        </li>
-        <li class="socials__item socials--in">
-          <a href="https://www.instagram.com/htmlacademy/" class="socials__socials">
-            <span class="visually-hidden">инстаграм</span>
-          </a>
-        </li>
-        <li class="socials__item socials--fc">
-          <a href="https://www.facebook.com/htmlacademy/" class="socials__socials">
-            <span class="visually-hidden">фейсбук</span>
-          </a>
-        </li>
-      </ul>
-      <div class="footer__developed">
-        <p class="footer__text">HTML Academy</p>
-        <a href="https://htmlacademy.ru/intensive/adaptive" class="footer__link">
-          <img src="img/html-icon-mobile.svg" alt="html Academy" width="27" height="34" class="footer__icon">
+      <div class="footer__container container">
+        <a href="index.html" class="footer__logo-link">
+          <img src="img/footer-logo.svg" alt="Cat Energy" width="128" height="24" class="footer__logo-text">
         </a>
+        <ul class="footer__socials socials list-reset">
+          <li class="socials__item socials--vk">
+            <a href="https://vk.com/htmlacademy" class="socials__socials">
+              <span class="visually-hidden">вконтакте</span>
+            </a>
+          </li>
+          <li class="socials__item socials--in">
+            <a href="https://www.instagram.com/htmlacademy/" class="socials__socials">
+              <span class="visually-hidden">инстаграм</span>
+            </a>
+          </li>
+          <li class="socials__item socials--fc">
+            <a href="https://www.facebook.com/htmlacademy/" class="socials__socials">
+              <span class="visually-hidden">фейсбук</span>
+            </a>
+          </li>
+        </ul>
+        <div class="footer__developed">
+          <p class="footer__text">HTML Academy</p>
+          <a href="https://htmlacademy.ru/intensive/adaptive" class="footer__link">
+            <img src="img/html-icon-mobile.svg" alt="html Academy" width="27" height="34" class="footer__icon">
+          </a>
+        </div>
       </div>
     </footer>
   </body>
