--- a/source/form.html
+++ b/source/form.html
@@ -38,7 +38,7 @@
     <main class="main">
       <h1 class="visually-hidden">Cat Energy - Функциональное питание для котов</h1>
 
-      <div class="conteiner">
+      <div class="container">
         <section class="selection">
           <h2 class="selection__title">Подбор программы</h2>
           <p class="selection__subtitle">Заполните анкету, и мы подберем программу питания для вашего кота</p>
@@ -152,31 +152,33 @@
     </main>
 
     <footer class="footer">
-      <a href="index.html" class="footer__logo-link">
-        <img src="img/footer-logo.svg" alt="Cat Energy" width="128" height="24" class="footer__logo-text">
-      </a>
-      <ul class="footer__socials socials list-reset">
-        <li class="socials__item socials--vk">
-          <a href="https://vk.com/htmlacademy" class="socials__socials">
-            <span class="visually-hidden">вконтакте</span>
-          </a>
-        </li>
-        <li class="socials__item socials--in">
-          <a href="https://www.instagram.com/htmlacademy/" class="socials__socials">
-            <span class="visually-hidden">инстаграм</span>
-          </a>
-        </li>
-        <li class="socials__item socials--fc">
-          <a href="https://www.facebook.com/htmlacademy/" class="socials__socials">
-            <span class="visually-hidden">фейсбук</span>
-          </a>
-        </li>
-      </ul>
-      <div class="footer__developed">
-        <p class="footer__text">HTML Academy</p>
-        <a href="https://htmlacademy.ru/intensive/adaptive" class="footer__link">
-          <img src="img/html-icon-mobile.svg" alt="html Academy" width="27" height="34" class="footer__icon">
+      <div class="footer__container container">
+        <a href="index.html" class="footer__logo-link">
+          <img src="img/footer-logo.svg" alt="Cat Energy" width="128" height="24" class="footer__logo-text">
         </a>
+        <ul class="footer__socials socials list-reset">
+          <li class="socials__item socials--vk">
+            <a href="https://vk.com/htmlacademy" class="socials__socials">
+              <span class="visually-hidden">вконтакте</span>
+            </a>
+          </li>
+          <li class="socials__item socials--in">
+            <a href="https://www.instagram.com/htmlacademy/" class="socials__socials">
+              <span class="visually-hidden">инстаграм</span>
+            </a>
+          </li>
+          <li class="socials__item socials--fc">
+            <a href="https://www.facebook.com/htmlacademy/" class="socials__socials">
+              <span class="visually-hidden">фейсбук</span>
+            </a>
+          </li>
+        </ul>
+        <div class="footer__developed">
+          <p class="footer__text">HTML Academy</p>
+          <a href="https://htmlacademy.ru/intensive/adaptive" class="footer__link">
+            <img src="img/html-icon-mobile.svg" alt="html Academy" width="27" height="34" class="footer__icon">
+          </a>
+        </div>
       </div>
     </footer>
   </body>
