--- a/source/index.html
+++ b/source/index.html
@@ -40,7 +40,7 @@
       <h1 class="visually-hidden">Cat Energy - Функциональное питание для котов</h1>
 
       <section class="greetings">
-        <div class="conteiner">
+        <div class="greetings__container container">
           <h2 class="greetings__title">Функциональное питание для котов</h1>
           <p class="greetings__slogan">Занялся собой? Займись котом!</p>
           <img src="img/index-can-mobile.svg" alt="" width="280" height="270" class="greetings__banner">
@@ -49,7 +49,7 @@
       </section>
 
       <section class="for-what">
-        <div class="conteiner">
+        <div class="container">
           <ul class="for-what__list list-reset">
             <li class="for-what__item">
               <div class="for-what__cat for-what__cat--slim"></div>
@@ -74,7 +74,7 @@
       </section>
 
       <section class="work">
-        <div class="conteiner">
+        <div class="container">
           <h2 class="work__title">Как это работает</h2>
           <ul class="work__list list-reset">
             <li class="work__item">Функциональное питание содержит только полезные питательные вещества.</li>
@@ -86,23 +86,26 @@
       </section>
 
       <section class="example">
-        <div class="conteiner">
-          <h2 class="example__title">Живой пример</h2>
+        <div class="example__container container">
 
-          <div class="example__description description">
-            <p class="description__subtitle">
-              Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
-              Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-            </p>
-            <div class="description__box">
-              <div class="description__bold">5 кг</div>
-              <p class="description__thin">снижение веса</p>
+          <div class="example__report">
+            <h2 class="example__title">Живой пример</h2>
+
+            <div class="example__description description">
+              <p class="description__subtitle">
+                Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
+                Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+              </p>
+              <div class="description__box">
+                <div class="description__bold">5 кг</div>
+                <p class="description__thin">снижение веса</p>
+              </div>
+              <div class="description__box">
+                <div class="description__bold">60 дней</div>
+                <p class="description__thin">затрачено времени</p>
+              </div>
+              <p class="description__total">Затраты на питание: 15 000 РУБ.</p>
             </div>
-            <div class="description__box">
-              <div class="description__bold">60 дней</div>
-              <p class="description__thin">затрачено времени</p>
-            </div>
-            <p class="description__total">Затраты на питание: 15 000 РУБ.</p>
           </div>
 
           <div class="example__slider slider">
@@ -134,31 +137,33 @@
 
 
     <footer class="footer">
-      <a href="index.html" class="footer__logo-link">
-        <img src="img/footer-logo.svg" alt="Cat Energy" width="128" height="24" class="footer__logo-text">
-      </a>
-      <ul class="footer__socials socials list-reset">
-        <li class="socials__item socials--vk">
-          <a href="https://vk.com/htmlacademy" class="socials__socials">
-            <span class="visually-hidden">вконтакте</span>
-          </a>
-        </li>
-        <li class="socials__item socials--in">
-          <a href="https://www.instagram.com/htmlacademy/" class="socials__socials">
-            <span class="visually-hidden">инстаграм</span>
-          </a>
-        </li>
-        <li class="socials__item socials--fc">
-          <a href="https://www.facebook.com/htmlacademy/" class="socials__socials">
-            <span class="visually-hidden">фейсбук</span>
-          </a>
-        </li>
-      </ul>
-      <div class="footer__developed">
-        <p class="footer__text">HTML Academy</p>
-        <a href="https://htmlacademy.ru/intensive/adaptive" class="footer__link">
-          <img src="img/html-icon-mobile.svg" alt="html Academy" width="27" height="34" class="footer__icon">
+      <div class="footer__container container">
+        <a href="index.html" class="footer__logo-link">
+          <img src="img/footer-logo.svg" alt="Cat Energy" width="128" height="24" class="footer__logo-text">
         </a>
+        <ul class="footer__socials socials list-reset">
+          <li class="socials__item socials--vk">
+            <a href="https://vk.com/htmlacademy" class="socials__socials">
+              <span class="visually-hidden">вконтакте</span>
+            </a>
+          </li>
+          <li class="socials__item socials--in">
+            <a href="https://www.instagram.com/htmlacademy/" class="socials__socials">
+              <span class="visually-hidden">инстаграм</span>
+            </a>
+          </li>
+          <li class="socials__item socials--fc">
+            <a href="https://www.facebook.com/htmlacademy/" class="socials__socials">
+              <span class="visually-hidden">фейсбук</span>
+            </a>
+          </li>
+        </ul>
+        <div class="footer__developed">
+          <p class="footer__text">HTML Academy</p>
+          <a href="https://htmlacademy.ru/intensive/adaptive" class="footer__link">
+            <img src="img/html-icon-mobile.svg" alt="html Academy" width="27" height="34" class="footer__icon">
+          </a>
+        </div>
       </div>
     </footer>
   </body>
