--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
           <source srcset="img/logo-desktop.svg" media="(min-width: 1440px)" />
           <source srcset="img/logo-tablet.svg" media="(min-width: 768px)" />
           <img src="img/logo-mobile.svg" srcset="img/logo-tablet.svg 768w" alt="Cat Energy - Функциональное питание для котов" width="33" height="38" class="header__logo">
-        </picture>
+        </picture> <!--TODO помоги пожалуйста с логотипом-->
       </a>
       <a href="index.html" class="header__link">
         <img src="img/logo-text.svg" alt="Cat Energy" class="header__img-text">
@@ -53,7 +53,7 @@
           <ul class="for-what__list list-reset">
             <li class="for-what__item">
               <div class="for-what__cat for-what__cat--slim"></div>
-              <h3 class="for-what__title">Похудение</h3>
+              <h3 class="for-what__title for-what__title--slim">Похудение</h3>
               <p class="for-what__text">
                 Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
                 Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
@@ -62,7 +62,7 @@
             </li>
             <li class="for-what__item">
               <div class="for-what__cat for-what__cat--fat"></div>
-              <h3 class="for-what__title">Набор массы</h3>
+              <h3 class="for-what__title for-what__title--strong">Набор массы</h3>
               <p class="for-what__text">
                 Заработать авторитет среди дворовых котов и даже собак?
                 Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
@@ -77,10 +77,18 @@
         <div class="container">
           <h2 class="work__title">Как это работает</h2>
           <ul class="work__list list-reset">
-            <li class="work__item">Функциональное питание содержит только полезные питательные вещества.</li>
-            <li class="work__item">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
-            <li class="work__item">Замените один-два приема обычной еды на наше функциональное питание.</li>
-            <li class="work__item">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+            <li class="work__item work__item--leaf">
+              <p class="work__text">Функциональное питание содержит только полезные питательные вещества.</p>
+            </li>
+            <li class="work__item work__item--powder">
+              <p class="work__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+            </li>
+            <li class="work__item work__item--fork">
+              <p class="work__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
+            </li>
+            <li class="work__item work__item--clock">
+              <p class="work__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+            </li>
           </ul>
         </div>
       </section>
@@ -126,7 +134,7 @@
 
       <section class="contacts">
         <div class="contacts__adress adress">
-          <h2 class="adress__title">Приглашаем к сотрудничеству дилеров!</h2>
+          <h2 class="adress__title">Приглашаем к&nbsp;сотрудничеству дилеров!</h2>
           <p class="adress__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
         <div class="contacts__map map">
@@ -161,7 +169,7 @@
         <div class="footer__developed">
           <p class="footer__text">HTML Academy</p>
           <a href="https://htmlacademy.ru/intensive/adaptive" class="footer__link">
-            <img src="img/html-icon-mobile.svg" alt="html Academy" width="27" height="34" class="footer__icon">
+            <img src="img/html-icon-mobile.svg" alt="html Academy" width="27" height="34" class="footer__icon"> <!--TODO проверь пожалуйста иконку по ПП-->
           </a>
         </div>
       </div>
