--- a/source/index.html
+++ b/source/index.html
@@ -23,7 +23,7 @@
           <span class="visually-hidden">Открыть / Закрыть меню</span>
         </button>
         <ul class="navigation__list list-reset">
-          <li class="navigation__item">
+          <li class="navigation__item navigation__item--active">
             <a href="index.html" class="navigation__link">Главная</a>
           </li>
           <li class="navigation__item">
