Доработки по индексу, нужна помощь

--- a/source/index.html
+++ b/source/index.html
@@ -54,7 +54,7 @@
             <li class="for-what__item">
               <div class="for-what__cat for-what__cat--slim"></div>
               <h3 class="for-what__title for-what__title--slim">Похудение</h3>
-              <p class="for-what__text">
+              <p class="for-what__text for-what__text--slim">
                 Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
                 Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
               </p>
@@ -63,7 +63,7 @@
             <li class="for-what__item">
               <div class="for-what__cat for-what__cat--fat"></div>
               <h3 class="for-what__title for-what__title--strong">Набор массы</h3>
-              <p class="for-what__text">
+              <p class="for-what__text for-what__text--strong">
                 Заработать авторитет среди дворовых котов и даже собак?
                 Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
               </p>
