--- a/source/catalog.html
+++ b/source/catalog.html
@@ -25,7 +25,7 @@
           <li class="navigation__item">
             <a href="index.html" class="navigation__link">Главная</a>
           </li>
-          <li class="navigation__item">
+          <li class="navigation__item navigation__item--active">
             <a href="catalog.html" class="navigation__link">Каталог продукции</a>
           </li>
           <li class="navigation__item">
