ПП каталога мобила

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -39,7 +39,7 @@
       <h1 class="visually-hidden">Cat Energy - Функциональное питание для котов</h1>
 
       <section class="catalog">
-        <div class="container">
+        <div class="catalog__container container">
           <h2 class="catalog__title">Каталог продукции</h2>
           <ul class="catalog__list list-reset">
             <li class="catalog__item products">
@@ -68,7 +68,7 @@
 
             <li class="catalog__item products">
               <a href="#" class="products__img-link">
-                <img src="img/energy-orange-10-mobile.png" alt="Cat Energy PRO 1000" width="84" height="100" class="products__img">
+                <img src="img/energy-orange-10-mobile.png" alt="Cat Energy PRO 1000" width="84" height="100" class="products__img"> <!--TODO Посмотри пожалуйста, что с картинками на ПП-->
               </a>
               <a href="#" class="products__main-link">
                 <h3 class="products__title">Cat Energy PRO 1000 г</h3>
@@ -220,10 +220,11 @@
       </section>
 
       <section class="additional-items">
-        <div class="container">
+        <div class="additional-items__container container">
           <h2 class="additional-items__title">Дополнительные товары</h2>
           <ul class="additional-items__unit list-reset">
-            <li class="additional-item__item addition">
+
+            <li class="additional-items__item addition">
               <h3 class="addition__title">Сахарозаменитель</h3>
               <div class="addition__compound">
                 <p class="addition__text">1 упаковка (100 г)</p>
@@ -232,7 +233,7 @@
               <a href="#" class="addition__button button">Заказать</a>
             </li>
 
-            <li class="additional-item__item addition">
+            <li class="additional-items__item addition">
               <h3 class="addition__title">питьевая вода</h3>
               <div class="addition__compound">
                 <p class="addition__text">5 литров</p>
@@ -241,8 +242,8 @@
               <a href="#" class="addition__button button">Заказать</a>
             </li>
 
-            <li class="additional-item__item addition">
-              <h3 class="addition__title">Молок</h3>
+            <li class="additional-items__item addition">
+              <h3 class="addition__title">Молоко</h3>
               <div class="addition__compound">
                 <p class="addition__text">1 литр</p>
                 <p class="addition__text">100 Р.</p>
@@ -250,7 +251,7 @@
               <a href="#" class="addition__button button">Заказать</a>
             </li>
 
-            <li class="additional-item__item addition">
+            <li class="additional-items__item addition">
               <h3 class="addition__title">Витамины</h3>
               <div class="addition__compound">
                 <p class="addition__text">1 упаковка (30 г)</p>
@@ -261,14 +262,14 @@
           </ul>
 
           <div class="additional-items__present">
-            <p class="additional-items__sentence">Закажите все и получите чехол для кота в подарок!</p>
+            <p class="additional-items__sentence">Закажите все и&nbsp;получите чехол для кота в подарок!</p>
           </div>
         </div>
       </section>
 
       <section class="contacts">
         <div class="contacts__adress adress">
-          <h2 class="adress__title">приглашаем к сотрудничеству дилеров!</h2>
+          <h2 class="adress__title">Приглашаем к&nbsp;сотрудничеству дилеров!</h2>
           <p class="adress__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
         <div class="contacts__map map">
