--- a/source/form.html
+++ b/source/form.html
@@ -142,7 +142,7 @@
 
       <section class="contacts">
         <div class="contacts__adress adress">
-          <h2 class="adress__title">Приглашаем к сотрудничеству дилеров!</h2>
+          <h2 class="adress__title">Приглашаем к&nbsp;сотрудничеству дилеров!</h2>
           <p class="adress__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
         <div class="contacts__map map">
