начал делать ПП на таблете в каталоге

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -44,7 +44,7 @@
           <ul class="catalog__list list-reset">
             <li class="catalog__item products">
               <a href="#" class="products__img-link">
-                <img src="img/energy-orange-5-mobile.png" alt="Cat Energy PRO 500" width="68" height="86" class="products__img">
+                <img src="img/energy-orange-5-mobile.png" alt="Cat Energy PRO 500" width="68" height="86" class="products__img"> <!--TODO Подскажи что делать с размером картинок на планшете и десктопе-->
               </a>
               <a href="#" class="products__main-link">
                 <h3 class="products__title">Cat Energy PRO 500 г</h3>
