--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
           <source srcset="img/logo-desktop.svg" media="(min-width: 1440px)" />
           <source srcset="img/logo-tablet.svg" media="(min-width: 768px)" />
           <img src="img/logo-mobile.svg" srcset="img/logo-tablet.svg 768w" alt="Cat Energy - Функциональное питание для котов" width="33" height="38" class="header__logo">
-        </picture>
+        </picture> <!--TODO помоги пожалуйста с логотипом-->
       </a>
       <a href="index.html" class="header__link">
         <img src="img/logo-text.svg" alt="Cat Energy" class="header__img-text">
@@ -23,7 +23,7 @@
           <span class="visually-hidden">Открыть / Закрыть меню</span>
         </button>
         <ul class="navigation__list list-reset">
-          <li class="navigation__item">
+          <li class="navigation__item navigation__item--active">
             <a href="index.html" class="navigation__link">Главная</a>
           </li>
           <li class="navigation__item">
@@ -40,7 +40,7 @@
       <h1 class="visually-hidden">Cat Energy - Функциональное питание для котов</h1>
 
       <section class="greetings">
-        <div class="conteiner">
+        <div class="greetings__container container">
           <h2 class="greetings__title">Функциональное питание для котов</h1>
           <p class="greetings__slogan">Занялся собой? Займись котом!</p>
           <img src="img/index-can-mobile.svg" alt="" width="280" height="270" class="greetings__banner">
@@ -49,12 +49,12 @@
       </section>
 
       <section class="for-what">
-        <div class="conteiner">
+        <div class="container">
           <ul class="for-what__list list-reset">
             <li class="for-what__item">
               <div class="for-what__cat for-what__cat--slim"></div>
-              <h3 class="for-what__title">Похудение</h3>
-              <p class="for-what__text">
+              <h3 class="for-what__title for-what__title--slim">Похудение</h3>
+              <p class="for-what__text for-what__text--slim">
                 Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
                 Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
               </p>
@@ -62,8 +62,8 @@
             </li>
             <li class="for-what__item">
               <div class="for-what__cat for-what__cat--fat"></div>
-              <h3 class="for-what__title">Набор массы</h3>
-              <p class="for-what__text">
+              <h3 class="for-what__title for-what__title--strong">Набор массы</h3>
+              <p class="for-what__text for-what__text--strong">
                 Заработать авторитет среди дворовых котов и даже собак?
                 Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
               </p>
@@ -74,35 +74,46 @@
       </section>
 
       <section class="work">
-        <div class="conteiner">
+        <div class="container">
           <h2 class="work__title">Как это работает</h2>
           <ul class="work__list list-reset">
-            <li class="work__item">Функциональное питание содержит только полезные питательные вещества.</li>
-            <li class="work__item">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
-            <li class="work__item">Замените один-два приема обычной еды на наше функциональное питание.</li>
-            <li class="work__item">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+            <li class="work__item work__item--leaf">
+              <p class="work__text">Функциональное питание содержит только полезные питательные вещества.</p>
+            </li>
+            <li class="work__item work__item--powder">
+              <p class="work__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+            </li>
+            <li class="work__item work__item--fork">
+              <p class="work__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
+            </li>
+            <li class="work__item work__item--clock">
+              <p class="work__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+            </li>
           </ul>
         </div>
       </section>
 
       <section class="example">
-        <div class="conteiner">
-          <h2 class="example__title">Живой пример</h2>
+        <div class="example__container container">
 
-          <div class="example__description description">
-            <p class="description__subtitle">
-              Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
-              Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-            </p>
-            <div class="description__box">
-              <div class="description__bold">5 кг</div>
-              <p class="description__thin">снижение веса</p>
+          <div class="example__report">
+            <h2 class="example__title">Живой пример</h2>
+
+            <div class="example__description description">
+              <p class="description__subtitle">
+                Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
+                Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+              </p>
+              <div class="description__box">
+                <div class="description__bold">5 кг</div>
+                <p class="description__thin">снижение веса</p>
+              </div>
+              <div class="description__box">
+                <div class="description__bold">60 дней</div>
+                <p class="description__thin">затрачено времени</p>
+              </div>
+              <p class="description__total">Затраты на питание: 15 000 РУБ.</p>
             </div>
-            <div class="description__box">
-              <div class="description__bold">60 дней</div>
-              <p class="description__thin">затрачено времени</p>
-            </div>
-            <p class="description__total">Затраты на питание: 15 000 РУБ.</p>
           </div>
 
           <div class="example__slider slider">
@@ -123,7 +134,7 @@
 
       <section class="contacts">
         <div class="contacts__adress adress">
-          <h2 class="adress__title">Приглашаем к сотрудничеству дилеров!</h2>
+          <h2 class="adress__title">Приглашаем к&nbsp;сотрудничеству дилеров!</h2>
           <p class="adress__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
         <div class="contacts__map map">
@@ -134,31 +145,33 @@
 
 
     <footer class="footer">
-      <a href="index.html" class="footer__logo-link">
-        <img src="img/footer-logo.svg" alt="Cat Energy" width="128" height="24" class="footer__logo-text">
-      </a>
-      <ul class="footer__socials socials list-reset">
-        <li class="socials__item socials--vk">
-          <a href="https://vk.com/htmlacademy" class="socials__socials">
-            <span class="visually-hidden">вконтакте</span>
-          </a>
-        </li>
-        <li class="socials__item socials--in">
-          <a href="https://www.instagram.com/htmlacademy/" class="socials__socials">
-            <span class="visually-hidden">инстаграм</span>
-          </a>
-        </li>
-        <li class="socials__item socials--fc">
-          <a href="https://www.facebook.com/htmlacademy/" class="socials__socials">
-            <span class="visually-hidden">фейсбук</span>
-          </a>
-        </li>
-      </ul>
-      <div class="footer__developed">
-        <p class="footer__text">HTML Academy</p>
-        <a href="https://htmlacademy.ru/intensive/adaptive" class="footer__link">
-          <img src="img/html-icon-mobile.svg" alt="html Academy" width="27" height="34" class="footer__icon">
+      <div class="footer__container container">
+        <a href="index.html" class="footer__logo-link">
+          <img src="img/footer-logo.svg" alt="Cat Energy" width="128" height="24" class="footer__logo-text">
         </a>
+        <ul class="footer__socials socials list-reset">
+          <li class="socials__item socials--vk">
+            <a href="https://vk.com/htmlacademy" class="socials__socials">
+              <span class="visually-hidden">вконтакте</span>
+            </a>
+          </li>
+          <li class="socials__item socials--in">
+            <a href="https://www.instagram.com/htmlacademy/" class="socials__socials">
+              <span class="visually-hidden">инстаграм</span>
+            </a>
+          </li>
+          <li class="socials__item socials--fc">
+            <a href="https://www.facebook.com/htmlacademy/" class="socials__socials">
+              <span class="visually-hidden">фейсбук</span>
+            </a>
+          </li>
+        </ul>
+        <div class="footer__developed">
+          <p class="footer__text">HTML Academy</p>
+          <a href="https://htmlacademy.ru/intensive/adaptive" class="footer__link">
+            <img src="img/html-icon-mobile.svg" alt="html Academy" width="27" height="34" class="footer__icon"> <!--TODO проверь пожалуйста иконку по ПП-->
+          </a>
+        </div>
       </div>
     </footer>
   </body>
