--- a/source/catalog.html
+++ b/source/catalog.html
@@ -25,7 +25,7 @@
           <li class="navigation__item">
             <a href="index.html" class="navigation__link">Главная</a>
           </li>
-          <li class="navigation__item">
+          <li class="navigation__item navigation__item--active">
             <a href="catalog.html" class="navigation__link">Каталог продукции</a>
           </li>
           <li class="navigation__item">
@@ -39,12 +39,12 @@
       <h1 class="visually-hidden">Cat Energy - Функциональное питание для котов</h1>
 
       <section class="catalog">
-        <div class="conteiner">
+        <div class="catalog__container container">
           <h2 class="catalog__title">Каталог продукции</h2>
           <ul class="catalog__list list-reset">
             <li class="catalog__item products">
               <a href="#" class="products__img-link">
-                <img src="img/energy-orange-5-mobile.png" alt="Cat Energy PRO 500" width="68" height="86" class="products__img">
+                <img src="img/energy-orange-5-mobile.png" alt="Cat Energy PRO 500" width="68" height="86" class="products__img"> <!--TODO Подскажи что делать с размером картинок на планшете и десктопе-->
               </a>
               <a href="#" class="products__main-link">
                 <h3 class="products__title">Cat Energy PRO 500 г</h3>
@@ -68,7 +68,7 @@
 
             <li class="catalog__item products">
               <a href="#" class="products__img-link">
-                <img src="img/energy-orange-10-mobile.png" alt="Cat Energy PRO 1000" width="84" height="100" class="products__img">
+                <img src="img/energy-orange-10-mobile.png" alt="Cat Energy PRO 1000" width="84" height="100" class="products__img"> <!--TODO Посмотри пожалуйста, что с картинками на ПП-->
               </a>
               <a href="#" class="products__main-link">
                 <h3 class="products__title">Cat Energy PRO 1000 г</h3>
@@ -220,10 +220,11 @@
       </section>
 
       <section class="additional-items">
-        <div class="conteiner">
+        <div class="additional-items__container container">
           <h2 class="additional-items__title">Дополнительные товары</h2>
           <ul class="additional-items__unit list-reset">
-            <li class="additional-item__item addition">
+
+            <li class="additional-items__item addition">
               <h3 class="addition__title">Сахарозаменитель</h3>
               <div class="addition__compound">
                 <p class="addition__text">1 упаковка (100 г)</p>
@@ -232,7 +233,7 @@
               <a href="#" class="addition__button button">Заказать</a>
             </li>
 
-            <li class="additional-item__item addition">
+            <li class="additional-items__item addition">
               <h3 class="addition__title">питьевая вода</h3>
               <div class="addition__compound">
                 <p class="addition__text">5 литров</p>
@@ -241,8 +242,8 @@
               <a href="#" class="addition__button button">Заказать</a>
             </li>
 
-            <li class="additional-item__item addition">
-              <h3 class="addition__title">Молок</h3>
+            <li class="additional-items__item addition">
+              <h3 class="addition__title">Молоко</h3>
               <div class="addition__compound">
                 <p class="addition__text">1 литр</p>
                 <p class="addition__text">100 Р.</p>
@@ -250,7 +251,7 @@
               <a href="#" class="addition__button button">Заказать</a>
             </li>
 
-            <li class="additional-item__item addition">
+            <li class="additional-items__item addition">
               <h3 class="addition__title">Витамины</h3>
               <div class="addition__compound">
                 <p class="addition__text">1 упаковка (30 г)</p>
@@ -261,14 +262,14 @@
           </ul>
 
           <div class="additional-items__present">
-            <p class="additional-items__sentence">Закажите все и получите чехол для кота в подарок!</p>
+            <p class="additional-items__sentence">Закажите все и&nbsp;получите чехол для кота в подарок!</p>
           </div>
         </div>
       </section>
 
       <section class="contacts">
         <div class="contacts__adress adress">
-          <h2 class="adress__title">приглашаем к сотрудничеству дилеров!</h2>
+          <h2 class="adress__title">Приглашаем к&nbsp;сотрудничеству дилеров!</h2>
           <p class="adress__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
         <div class="contacts__map map">
@@ -278,31 +279,33 @@
     </main>
 
     <footer class="footer">
-      <a href="index.html" class="footer__logo-link">
-        <img src="img/footer-logo.svg" alt="Cat Energy" width="128" height="24" class="footer__logo-text">
-      </a>
-      <ul class="footer__socials socials list-reset">
-        <li class="socials__item socials--vk">
-          <a href="https://vk.com/htmlacademy" class="socials__socials">
-            <span class="visually-hidden">вконтакте</span>
-          </a>
-        </li>
-        <li class="socials__item socials--in">
-          <a href="https://www.instagram.com/htmlacademy/" class="socials__socials">
-            <span class="visually-hidden">инстаграм</span>
-          </a>
-        </li>
-        <li class="socials__item socials--fc">
-          <a href="https://www.facebook.com/htmlacademy/" class="socials__socials">
-            <span class="visually-hidden">фейсбук</span>
-          </a>
-        </li>
-      </ul>
-      <div class="footer__developed">
-        <p class="footer__text">HTML Academy</p>
-        <a href="https://htmlacademy.ru/intensive/adaptive" class="footer__link">
-          <img src="img/html-icon-mobile.svg" alt="html Academy" width="27" height="34" class="footer__icon">
+      <div class="footer__container container">
+        <a href="index.html" class="footer__logo-link">
+          <img src="img/footer-logo.svg" alt="Cat Energy" width="128" height="24" class="footer__logo-text">
         </a>
+        <ul class="footer__socials socials list-reset">
+          <li class="socials__item socials--vk">
+            <a href="https://vk.com/htmlacademy" class="socials__socials">
+              <span class="visually-hidden">вконтакте</span>
+            </a>
+          </li>
+          <li class="socials__item socials--in">
+            <a href="https://www.instagram.com/htmlacademy/" class="socials__socials">
+              <span class="visually-hidden">инстаграм</span>
+            </a>
+          </li>
+          <li class="socials__item socials--fc">
+            <a href="https://www.facebook.com/htmlacademy/" class="socials__socials">
+              <span class="visually-hidden">фейсбук</span>
+            </a>
+          </li>
+        </ul>
+        <div class="footer__developed">
+          <p class="footer__text">HTML Academy</p>
+          <a href="https://htmlacademy.ru/intensive/adaptive" class="footer__link">
+            <img src="img/html-icon-mobile.svg" alt="html Academy" width="27" height="34" class="footer__icon">
+          </a>
+        </div>
       </div>
     </footer>
   </body>
