ПП МОБИЛКИ И ПЛАНШЕТА ИНДЕКС
Для фулл ПП на планшет не хватает: Слайдера и гардиента

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,30 +9,32 @@
   </head>
   <body class="body">
     <header class="header">
-      <a href="index.html" class="header__link">
-        <picture>
-          <source srcset="img/logo-desktop.svg" media="(min-width: 1440px)" />
-          <source srcset="img/logo-tablet.svg" media="(min-width: 768px)" />
-          <img src="img/logo-mobile.svg" srcset="img/logo-tablet.svg 768w" alt="Cat Energy - Функциональное питание для котов" width="33" height="38" class="header__logo">
-        </picture>
-        <img src="img/logo-text.svg" alt="Cat Energy" class="header__img-text">
-      </a>
-      <nav class="header__navigation navigation">
-        <button class="navigation__toggle">
-          <span class="visually-hidden">Открыть / Закрыть меню</span>
-        </button>
-        <ul class="navigation__list list-reset">
-          <li class="navigation__item">
-            <a href="index.html" class="navigation__link">Главная</a>
-          </li>
-          <li class="navigation__item navigation__item--active">
-            <a href="catalog.html" class="navigation__link">Каталог продукции</a>
-          </li>
-          <li class="navigation__item">
-            <a href="form.html" class="navigation__link">Подбор программы</a>
-          </li>
-        </ul>
-      </nav>
+      <div class="header__container container">
+        <a href="index.html" class="header__link">
+          <picture>
+            <source srcset="img/logo-desktop.svg" media="(min-width: 1440px)" />
+            <source srcset="img/logo-tablet.svg" media="(min-width: 768px)" />
+            <img src="img/logo-mobile.svg" alt="Cat Energy - Функциональное питание для котов" width="191" height="38" class="header__logo">
+          </picture>
+        </a>
+
+        <nav class="header__navigation navigation">
+          <button class="navigation__toggle button">
+            <span class="visually-hidden">Открыть / Закрыть меню</span>
+          </button>
+          <ul class="navigation__list list-reset">
+            <li class="navigation__item navigation__item--active">
+              <a href="index.html" class="navigation__link">Главная</a>
+            </li>
+            <li class="navigation__item">
+              <a href="catalog.html" class="navigation__link">Каталог продукции</a>
+            </li>
+            <li class="navigation__item">
+              <a href="form.html" class="navigation__link">Подбор программы</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <main class="main">
