--- a/source/index.html
+++ b/source/index.html
@@ -8,32 +8,32 @@
   </head>
   <body class="body">
     <header class="header">
-      <a href="index.html" class="header__link">
-        <picture>
-          <source srcset="img/logo-desktop.svg" media="(min-width: 1440px)" />
-          <source srcset="img/logo-tablet.svg" media="(min-width: 768px)" />
-          <img src="img/logo-mobile.svg" srcset="img/logo-tablet.svg 768w" alt="Cat Energy - Функциональное питание для котов" width="33" height="38" class="header__logo">
-        </picture> <!--TODO помоги пожалуйста с логотипом-->
-      </a>
-      <a href="index.html" class="header__link">
-        <img src="img/logo-text.svg" alt="Cat Energy" class="header__img-text">
-      </a>
-      <nav class="header__navigation navigation">
-        <button class="navigation__toggle button">
-          <span class="visually-hidden">Открыть / Закрыть меню</span>
-        </button>
-        <ul class="navigation__list list-reset">
-          <li class="navigation__item navigation__item--active">
-            <a href="index.html" class="navigation__link">Главная</a>
-          </li>
-          <li class="navigation__item">
-            <a href="catalog.html" class="navigation__link">Каталог продукции</a>
-          </li>
-          <li class="navigation__item">
-            <a href="form.html" class="navigation__link">Подбор программы</a>
-          </li>
-        </ul>
-      </nav>
+      <div class="header__container container">
+        <a href="index.html" class="header__link">
+          <picture>
+            <source srcset="img/logo-desktop.svg" media="(min-width: 1440px)" />
+            <source srcset="img/logo-tablet.svg" media="(min-width: 768px)" />
+            <img src="img/logo-mobile.svg" alt="Cat Energy - Функциональное питание для котов" width="191" height="38" class="header__logo">
+          </picture>
+        </a>
+
+        <nav class="header__navigation navigation">
+          <button class="navigation__toggle button">
+            <span class="visually-hidden">Открыть / Закрыть меню</span>
+          </button>
+          <ul class="navigation__list list-reset">
+            <li class="navigation__item navigation__item--active">
+              <a href="index.html" class="navigation__link">Главная</a>
+            </li>
+            <li class="navigation__item">
+              <a href="catalog.html" class="navigation__link">Каталог продукции</a>
+            </li>
+            <li class="navigation__item">
+              <a href="form.html" class="navigation__link">Подбор программы</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <main class="main">
@@ -51,19 +51,19 @@
       <section class="for-what">
         <div class="container">
           <ul class="for-what__list list-reset">
-            <li class="for-what__item">
-              <div class="for-what__cat for-what__cat--slim"></div>
+            <li class="for-what__item for-what__item--slim">
+              <div class="for-what__cat"></div>
               <h3 class="for-what__title for-what__title--slim">Похудение</h3>
-              <p class="for-what__text for-what__text--slim">
+              <p class="for-what__text">
                 Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
                 Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
               </p>
               <a href="#" class="for-what__link">Каталог slim</a>
             </li>
-            <li class="for-what__item">
-              <div class="for-what__cat for-what__cat--fat"></div>
+            <li class="for-what__item for-what__item--strong">
+              <div class="for-what__cat"></div>
               <h3 class="for-what__title for-what__title--strong">Набор массы</h3>
-              <p class="for-what__text for-what__text--strong">
+              <p class="for-what__text">
                 Заработать авторитет среди дворовых котов и даже собак?
                 Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
               </p>
@@ -87,7 +87,7 @@
               <p class="work__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
             </li>
             <li class="work__item work__item--clock">
-              <p class="work__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+              <p class="work__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего&nbsp;питомца!</p>
             </li>
           </ul>
         </div>
@@ -112,13 +112,17 @@
                 <div class="description__bold">60 дней</div>
                 <p class="description__thin">затрачено времени</p>
               </div>
-              <p class="description__total">Затраты на питание: 15 000 РУБ.</p>
+              <p class="description__total">
+                <span class="description__string">Затраты на питание:</span>
+                <span class="description__string">15 000 РУБ.</span>
+              </p>
             </div>
           </div>
 
           <div class="example__slider slider">
             <div class="slider__preview">
-              <img src="img/before-mobile.jpg" alt="Кот до диеты" width="280" height="232" class="slider__img">
+              <img src="img/before-mobile.jpg" alt="Кот до диеты" width="280" height="232" class="slider__img visually-hidden">
+              <img src="img/slim-fat-cat.png" alt="Кот до диеты" width="280" height="232" class="slider__img">
               <img src="img/after.jpg" alt="Кот после диеты" width="280" height="232" class="slider__img visually-hidden">
             </div>
             <div class="slider__controls range">
@@ -135,7 +139,10 @@
       <section class="contacts">
         <div class="contacts__adress adress">
           <h2 class="adress__title">Приглашаем к&nbsp;сотрудничеству дилеров!</h2>
-          <p class="adress__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+          <p class="adress__text">
+            <span class="adress__string">ул. Большая Конюшенная, д. 19/8</span>
+            <span class="adress__string">Санкт-Петербург</span>
+          </p>
         </div>
         <div class="contacts__map map">
           <img src="img/map.png" alt="Карта" width="320" height="362" class="map__img">
@@ -169,7 +176,7 @@
         <div class="footer__developed">
           <p class="footer__text">HTML Academy</p>
           <a href="https://htmlacademy.ru/intensive/adaptive" class="footer__link">
-            <img src="img/html-icon-mobile.svg" alt="html Academy" width="27" height="34" class="footer__icon"> <!--TODO проверь пожалуйста иконку по ПП-->
+            <img src="img/html-icon-mobile.svg" alt="html Academy" width="27" height="34" class="footer__icon">
           </a>
         </div>
       </div>
